--- a/pages/读报从小开始.md
+++ b/pages/读报从小开始.md
@@ -3,7 +3,6 @@ title: 读报从小开始
 permalink: /ZBSchools-synopses
 description: ""
 ---
-
 <style>
    .btntop {
     position: fixed;
@@ -39,4 +38,5 @@ description: ""
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Reading The News From A Tender Age</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">SPH Media Limited has launched four student publications with educational values and fun elements that cater to pre-school, primary and secondary school students. These are Thumbs Up Little Junior, Thumbs Up Junior (lower primary), Thumbs Up (upper primary), and zbCOMMA.</p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The student publications have also launched an enhanced online learning portal, zbschools.sg. This platform enables students to explore engaging content and videos using self-learning tools. Students can enjoy a fun and interactive process for learning Chinese while cultivating the habit of reading from a young age.</p>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
