--- a/pages/高中.md
+++ b/pages/高中.md
@@ -350,5 +350,6 @@ width:80%;
 	<img src="/images/BSP-Gif.gif"><br/><center>
 <span style="color:#d14165;font-size:18px;font-family:KaiTi; margin-top:-12px;">双文化课程海外浸濡</span></center> <br/>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">双文化课程相关链接</h4>
-<a href="https://www.moe.gov.sg/financial-matters/awards-scholarships/programme-scholarships" target="_blank" style="font-family:KaiTi">双文化课程奖学金</a>
+<a href="https://www.moe.gov.sg/financial-matters/awards-scholarships/programme-scholarships" target="_blank" style="font-family:KaiTi">双文化课程奖学金</a><br><br>
+	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
