--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -81,7 +81,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+  <a href="/cl-cpcll" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
 </table>
@@ -209,7 +209,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
  <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
+  <a href="cl-sccl" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
 </table>
