--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -105,11 +105,11 @@ description: ""
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">
     点子三：小小瑜伽初学者（认识笔画）</h4>
-   <p style="font-size:25px;font-family:KaiTi;">        孩子使用身体的部位书空不同的笔画——小至手指，大至脚、腰甚至全身。你可以根据幼儿的兴趣和能力挑战以下不同的笔画：
+   <p style="font-size:25px;font-family:KaiTi;">        孩子可以根据自己的兴趣和能力，使用身体部位（如：手、脚）比划不同的笔画：：
 <br/>
      <img src="/images/presch1.png" />
 </p> 
-     <p style="font-size:25px;font-family:KaiTi;">之后，你也可以和孩子一起书空的不同笔画，还可以和孩子一起利用周围的物品寻找与笔画形状相似的地方。</p></td>
+     <p style="font-size:25px;font-family:KaiTi;">你也可以引导孩子观察周围的物品，寻找这些笔画。</p></td>
   </table>
 	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
