--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -160,6 +160,6 @@ text-decoration:none;
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td></tr>
 		</table>
-	<p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;font-style: italic;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
+	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body>
