--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -90,7 +90,7 @@ description: ""
 </p>
 </td>
   </table><br />
-   <p style="font-size:25px;font-family:KaiTi">之后，你可以和孩子在住家附近收集“自然”的材料，比如叶子和枝条（注意戴上手套，避免直接触摸植物）。将收集的材料清理干净后，你可以和孩子一起用这些材料，黏贴、制作新加坡景点的贴画。</p>
+   <p style="font-size:25px;font-family:KaiTi">过后，你可以利用一些再循环材料或住家周围的落叶和枝条，与孩子一起制作新加坡景点的贴画。</p>
   <p style="font-size:25px;font-family:KaiTi"> 阅读相关绘本让孩子更了解新加坡吧：<br/>
 <a href="https://www.bilingualism.sg/whatsup/List-of-Resources.pdf" target="_blank;">   https://www.bilingualism.sg/whatsup/List-of-Resources.pdf </a>  </p>
     <table width="300px" border="0" cellpadding="0" cellspacing="0" style="-moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; border: 3px solid #ccc;">
