--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -105,7 +105,7 @@ description: ""
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">
     点子三：小小瑜伽初学者（认识笔画）</h4>
-   <p style="font-size:25px;font-family:KaiTi;">        孩子可以根据自己的兴趣和能力，使用身体部位（如：手、脚）比划不同的笔画：：
+   <p style="font-size:25px;font-family:KaiTi;">        孩子可以根据自己的兴趣和能力，使用身体部位（如：手、脚）比划不同的笔画：
 <br/>
      <img src="/images/presch1.png" />
 </p> 
