--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
@@ -131,5 +131,5 @@ text-decoration:none;
   <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
   </div></td>
     </tr>
-</table><p style="font-size: 16px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;font-style: italic;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
+</table><br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
