--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -78,7 +78,7 @@ description: ""
 <h4 style="font-family:KaiTi;font-size:25px;">
   点子一: 花园中的城市</h4>
   <p style="font-size:25px;font-family:KaiTi">
-你可以和孩子一起上网观看新加坡不同景点的录像和图片，和孩子谈谈它们是新加坡的什么地方？人们可以去那里做什么？通过对话向孩子们介绍享有“花园中的城市”美誉的新加坡，并让孩子说出他们最想去什么地方以及原因。你也可以和孩子一起唱以下的儿歌，待孩子熟悉后，也可以就画线的部分进行改编。</p>
+你可以与孩子一起上网观看新加坡不同景点的录像和图片，谈谈它们是新加坡的什么地方、人们可以去那里做什么。通过对话向孩子们介绍享有“花园中的城市”美誉的新加坡，并让孩子说出他们最想去的地方以及原因。你可以与孩子一起唱以下的儿歌，待孩子熟悉后，也可以进行儿歌改编。</p>
 <p style="font-size:25px;font-family:KaiTi;text-align:center"><strong>我们的家园</strong><br/>
 （以《小星星》“Twinkle Twinkle Little Star” 旋律演唱）<br/>
 干净的河流，美丽的花园， <br/>
