--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -35,8 +35,8 @@ description: ""
 </p>
   <h4 style="font-size:30px;font-family:KaiTi;">教育部幼儿园课程
 </h4>
-<p style="font-size:25px;font-family:KaiTi;">教育部幼儿园的课程是以《培育幼儿：学前母语课程框架》为依据，并由教育部课程专科督导以及课程规划员设计与开发的，指引新加坡幼儿园的课程发展。<br /><br />
-在教育部幼儿园，幼儿将通过HI-Light和繁星语文两个旗舰课程体验丰富多彩的学习旅程。<br /><br /></p>
+<p style="font-size:25px;font-family:KaiTi;">在教育部幼儿园，幼儿将通过HI-Light和繁星语文两个旗舰课程展开丰富多彩的学习旅程。<br /><br />
+繁星语文课程（华文）是以《培育幼儿：学前母语课程框架》为依据，并由教育部课程专科督导以及课程规划员设计与开发。<br /><br /></p>
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QXvV21a-TqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="font-size:18px;font-family:KaiTi">教育部幼儿园里的一天 </span>
  </center>
