--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -23,18 +23,20 @@ description: ""
 <a href="/exhibits/chinese-exhibitions-b/moe-curriculum" class="btn" style="float:left;">Previous</a>
   <a href="/cl-prischool" class="btn" style="float:right;">Next</a><br />
   <img src="/images/MTLS2022_CL_Curriculum_V1_PreSch_1.jpg" />
-<p style="font-size:30px;font-family:KaiTi"><h4 style="font-size:30px;font-family:KaiTi;">教育部幼儿园 
+<p style="font-size:30px;font-family:KaiTi"><h4 style="font-size:30px;font-family:KaiTi;">
  <a href="#C1" style="font-size:25px"><span style="color:blue;font-family:KaiTi">繁星语文课程</span></a>
  <a href="#C2" style="font-size:25px"><span style="color:blue;font-family:KaiTi">大图书共享阅读</span></a>
  <a href="#C3" style="font-size:25px"><span style="color:blue;font-family:KaiTi">奥秘探索周计划</span></a><br />
  <a href="#C4" style="font-size:25px"><span style="color:blue;font-family:KaiTi">居家活动好点子
 </span></a> <br /><br /></h4>
+	
+<h4 style="font-size:30px;font-family:KaiTi;">教育部幼儿园课程
+</h4>
 <p style="font-size:25px;font-family:KaiTi; text-align:justify;">
 我们深信幼儿是好奇、积极、有能力的学习者。<br /><br />
 我们的愿景是为每一个幼儿提供良好的起点，同时，通过优质且能负担得起的学前教育，进一步提升新加坡学前教育的素质。<br />
 </p>
-  <h4 style="font-size:30px;font-family:KaiTi;">教育部幼儿园课程
-</h4>
+
 <p style="font-size:25px;font-family:KaiTi;">在教育部幼儿园，幼儿将通过HI-Light和繁星语文两个旗舰课程展开丰富多彩的学习旅程。<br /><br />
 繁星语文课程（华文）是以《培育幼儿：学前母语课程框架》为依据，并由教育部课程专科督导以及课程规划员设计与开发。<br /><br /></p>
 <center>
