--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -48,9 +48,9 @@ description: ""
 <br />
 <h4 style="font-family:KaiTi;font-size:35px" class="lbCh">学前母语课程框架 </h4>
      <p style="font-size:25px;font-family:KaiTi;text-align:justify;">
-    《培育幼儿：学前母语课程框架》的核心理念是：幼儿是好奇、积极、有能力的母语学习者。持有这个理念的教师必能实现这套框架的愿景、宗旨以及学习目标。
+《培育幼儿：学前母语课程框架》显示学前华文教学的理念、愿景、宗旨、指导原则和学习目标之间的关系，为学前教师指明学前华文教学的方向。
 <br />
-<br />本框架的教学宗旨建立在教学愿景之上，教学宗旨和指导原则又能协助教师设计课堂教学。教师在根据指导原则进行课堂教学时，应谨记课程学习目标，以实现母语教学的愿景。</p> 
+
  <img src="/images/MTLS_1.png" /> 
 <h4 id="C2"><span style="font-size:35px;font-family:KaiTi;">大图书共享阅读 </span></h4>
  <ol>
