--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -63,7 +63,7 @@ description: ""
        <li style="font-size:25px;font-family:KaiTi">    对本地文化有初步的认识</li></ul>
          </li>
      <li style="font-size:25px;font-family:KaiTi">    这套教学资源除了支持幼儿的双语发展，也体现了非常浓厚的本土特色。目前，所有的教育部幼儿园在课堂内都使用这套教学资源。</li>
-     <li style="font-size:25px;font-family:KaiTi">    大图书共享阅读是教育部幼儿园课堂内使用的教学法。共享阅读能让幼儿享受阅读的乐趣，并鼓励幼儿通过有趣的活动，掌握听、说、读的能力。欲知教学步骤，请点击此处。<a href="/files/Annex-1.pdf" target="_blank" style="font-family:KaiTi;">此处</a>。</li>
+     <li style="font-size:25px;font-family:KaiTi">    大图书共享阅读是教育部幼儿园课堂内使用的教学法。共享阅读能让幼儿享受阅读的乐趣，并鼓励幼儿通过有趣的活动，掌握听、说、读的能力。欲知教学步骤，请点击<a href="/files/Annex-1.pdf" target="_blank" style="font-family:KaiTi;">此处</a>。</li>
      </p>
 </ol>
  <img src="/images/MTLS_2.jpg"/>   
