--- a/pages/小学.md
+++ b/pages/小学.md
@@ -154,8 +154,8 @@ width:100%;
   </tr>
   <tr>
     <td style="text-align: left;font-family:KaiTi;">
-    <li style="text-align: left;;font-family:KaiTi;font-size:25px;">以“21世纪技能的核心价值观”为引导，培养学生良好的情意品德和正确的价值观　　　</li>
-      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    重视华族文化的传承，让学生从小感受、认识华族语言文化的魅力和价值</li>
+    <li style="text-align: left;;font-family:KaiTi;font-size:25px;">以“21世纪技能的核心价值观”为引导，培养学生良好的情意品德和正确的价值观。</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    重视华族文化的传承，让学生从小感受、认识华族语言文化的魅力和价值。</li>
 <div class="rowimg" style="margin:4%;">
   <div class="columnimg" style="float: left; width: 25%; padding: 5px;transform: rotate(-24deg);">
  <img src="/images/cl-prisch2.png" />
