--- a/pages/小学.md
+++ b/pages/小学.md
@@ -179,8 +179,8 @@ width:100%;
   </tr>
   <tr>
      <td style="text-align: left;font-family:KaiTi;">    
-     <li style="text-align: left;font-family:KaiTi;font-size:25px;">重视发挥语言与思维之间相互促进的作用</li>
-     <li style="text-align: left;font-family:KaiTi;font-size:25px;"> 注重学习方法与策略的指导</li>
+     <li style="text-align: left;font-family:KaiTi;font-size:25px;">重视发挥语言与思维之间相互促进的作用。</li>
+     <li style="text-align: left;font-family:KaiTi;font-size:25px;"> 注重学习方法与策略的指导。</li>
    </td>
   </tr>
   <tr>
@@ -190,7 +190,7 @@ width:100%;
   <tr>
      <td style="text-align: left;font-family:KaiTi;">
       <li style="text-align: left;font-family:KaiTi;font-size:25px;">有效地使用资讯科技，激发学生学习华文的兴趣，提供个别化的学习方式。</li>
-      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    利用网络平台，促进协作式和探究式的学习，提高学习效益</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    利用网络平台，促进协作式和探究式的学习，提高学习效益。</li>
     </td>
   </tr>
    <tr>
@@ -199,8 +199,8 @@ width:100%;
   </tr>
   <tr>
      <td style="text-align: left;font-family:KaiTi;">
-      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    以“全面性评价”为引导，结合教学和评价策略</li>
-      <li style="text-align: left;font-family:KaiTi;font-size:25px;">       兼顾学习过程和学习成果，在教学中融入有效的评价策略</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    以“全面性评价”为引导，结合教学和评价策略。</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">       兼顾学习过程和学习成果，在教学中融入有效的评价策略。</li>
     </td>
   </tr>
 </table>
