--- a/_exhibits/华文学习展示区/总览.md
+++ b/_exhibits/华文学习展示区/总览.md
@@ -30,4 +30,4 @@ third_nav_title: 华文学习展示区
 <br>
 	<a href="/exhibits/chinese-exhibitions-e/community-partners/" ><img src="/images/Exhibits Overview/CL_Community-100.jpg"></a>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
-	<p style="font-size: 16px;font-style: italic;font-family: Lato,sans-serif;padding-top:12px;margin:10px;">“For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.”</p>
+	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
