--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -111,7 +111,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Meridian-Primary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
+  <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
@@ -126,7 +126,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/Corporation-Primary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
-  <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
+  <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
 </table>
