--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
@@ -82,7 +82,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/tl-Gan-Eng-Seng-Primary-School-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition </a>
+  <a href="/Gan-Eng-Seng-Pri-exhibition" class="btn2" style="color:#fff;">View Exhibition </a>
   </div></td>
     </tr>
 </table>
@@ -114,7 +114,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/tl-Let-Express-and-Explore-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition </a>
+  <a href="/Evergreen-Pri-exhibition" class="btn2" style="color:#fff;">View Exhibition </a>
   </div></td>
     </tr>
 </table>
@@ -128,7 +128,7 @@ text-decoration:none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
  <a href="/tl-Boon-Lay-Secondary-School-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+  <a href="/Boon-Lay-Sec-tl-exhibition" class="btn2" style="color:#fff;">View Exhibition</a>
   </div></td>
     </tr>
 </table><br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
