--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -71,7 +71,7 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td style="border: none; width: 70%;font-size:25px;font-family:KaiTi;text-align: left;padding: 8px;background-color:#d84178;color:#fff">培养双语幼儿<br />教育部幼儿园（励众）
+    <td style="border: none; width: 70%;font-size:25px;font-family:KaiTi;text-align: left;padding: 8px;background-color:#d84178;color:#fff">培养双语幼儿<br />教育部幼儿园（励众）<br/>
 			<span style="font-family:Lato,sans-serif;font-size:20px;"> [MK@Horizon] </span><br />
  </td>
     <td style="border: none;
