--- a/_exhibits/华文学习展示区/学前中心.md
+++ b/_exhibits/华文学习展示区/学前中心.md
@@ -77,7 +77,7 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/MK-Horizon-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/MK-Horizon-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -88,13 +88,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">文化英雄联盟之我是小战士
-  <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> MK@Wellington</span>
+  <br />教育部幼儿园（伟林） <br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [MK@Wellington]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/MK-Wellington-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/MK-Wellington-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td>
     </tr>
@@ -104,12 +104,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">探索生活，趣学华语 <br/>
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> 		Genius Hive Preschool </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">探索生活，趣学华语 <br/>博乐学幼儿园<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [Genius Hive Preschool] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Genius-Hive-Preschool-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Genius-Hive-Preschool-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="/Genius-Hive-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -119,12 +119,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">我是小小探索家——运用华语看世界 <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> 	My First Skool at Blk 209 Ang Mo Kio </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">我是小小探索家——运用华语看世界 <br />职总优儿学府幼乐园@宏茂桥209座分校<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> 	[My First Skool at Blk 209 Ang Mo Kio]</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/My-First-Skool-Ang-Mo-Kio-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/My-First-Skool-Ang-Mo-Kio-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="/MTLS-MFS-AMK" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -134,12 +134,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">保护当地野生动物 - 穿山甲和水獭<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> 	My First Skool at Blk 180B Boon Lay  </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">保护当地野生动物 - 穿山甲和水獭<br />职总优儿学府幼乐园@文礼180B座分校<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [My First Skool at Blk 180B Boon Lay]  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/My-First-Skool-Boon-Lay-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/My-First-Skool-Boon-Lay-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板 </a>
   </div></td>
     </tr>
@@ -150,13 +150,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">教之以礼 育之以德
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;"> Tzu Chi Great Love PreSchool</span>
+   <br />慈济大爱幼教中心<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;"> [Tzu Chi Great Love PreSchool]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Tzu-Chi-Great-Love-Preschool-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Tzu-Chi-Great-Love-Preschool-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td></tr>
 		</table>
