--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -72,13 +72,13 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-family:KaiTi;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;">林景华文小学堂<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Woodgrove Primary School </span><br />
+							 text-align: left;padding: 8px;background-color:#d84178;color:#fff;">林景华文小学堂<br /> 林景小学</br>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Woodgrove Primary School] </span><br />
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Woodgrove-Primary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Woodgrove-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -89,13 +89,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">字谜花园
-  <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Maha Bodhi School</span>
+  <br />菩提学校<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Maha Bodhi School]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Maha-Bodhi-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Maha-Bodhi-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td>
     </tr>
@@ -105,12 +105,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">秘密花园, 师生同乐 <br/>
-	<span style="font-family:Lato,sans-serif;font-size:20px;">Meridian Primary School </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">秘密花园, 师生同乐 <br/>美廉小学<br/>
+	<span style="font-family:Lato,sans-serif;font-size:20px;">[Meridian Primary School] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Meridian-Primary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Meridian-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -120,12 +120,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">探究乐园<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Corporation Primary School </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">探究乐园<br />德行小学<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Corporation Primary School] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Corporation-Primary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Corporation-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="/MTLS-CPS-Exhibition" class="btn2" style="color:#fff;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -135,12 +135,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">巧用绘本，让华文学习活起来<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">	First Toa Payoh Primary School </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">巧用绘本，让华文学习活起来<br />大智小学<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">	[First Toa Payoh Primary School] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/First-Toa-Payoh-Primary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/First-Toa-Payoh-Primary-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板 </a>
   </div></td>
     </tr>
@@ -151,13 +151,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">就地循环模式的混合式学习
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Punggol Secondary School </span>
+   <br /> 培道中学<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Punggol Secondary School] </span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Punggol-Secondary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Punggol-Secondary-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td>
     </tr>
@@ -167,14 +167,14 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">广泛阅读计划
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Jurong Secondary School </span>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">让阅读更精彩
+   <br /> 裕廊中学<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Jurong Secondary School] </span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Jurong-Secondary-School-synopses" class="btn1" style="color:#fff;">阅读简介</a>
+ <a href="/Jurong-Secondary-School-synopses" class="btn1" style="color:#fff;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td>
     </tr>
