--- a/_exhibits/华文学习展示区/中小学.md
+++ b/_exhibits/华文学习展示区/中小学.md
@@ -72,7 +72,7 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-family:KaiTi;
-							 text-align: left;padding: 8px;background-color:#d84178;color:#fff;">林景华文小学堂<br /> 林景小学</br>
+							 text-align: left;padding: 8px;background-color:#d84178;color:#fff;">林景华文小学堂<br /> 林景小学<br/>
 			<span style="font-family:Lato,sans-serif;font-size:20px;">[Woodgrove Primary School] </span><br />
  </td>
     <td style="border: none;
