--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -75,12 +75,12 @@ text-decoration:none;
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">推广华文学习委员会
    <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Committee to Promote Chinese Language Learning</span>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Committee to Promote Chinese Language Learning]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Committee-to-Promote-Chinese-Language-Learning-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="/cl-cpcll" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
@@ -91,12 +91,12 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-family:KaiTi;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff">滨海艺术中心<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Esplanade - Theatres on the Bay </span><br />
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Esplanade - Theatres on the Bay] </span><br />
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Esplanade-Theatres-on-the-Bay-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Esplanade-Theatres-on-the-Bay-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;"> 阅览展板 </a>
   </div></td>
     </tr>
