--- a/_exhibits/华文学习展示区/社区合作伙伴.md
+++ b/_exhibits/华文学习展示区/社区合作伙伴.md
@@ -107,13 +107,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">播下热爱母语的种子！
-  <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Lee Kuan Yew Fund for Bilingualism</span>
+  <br />李光耀双语基金<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Lee Kuan Yew Fund for Bilingualism]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Lee-Kuan-Yew-Fund-for-Bilingualism-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Lee-Kuan-Yew-Fund-for-Bilingualism-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
@@ -124,13 +124,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">进入奇妙的动物世界
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Mandai Wildlife Reserve </span>
+   <br />万态野生动物世界<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Mandai Wildlife Reserve] </span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Wildlife-Reserves-Singapore-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
@@ -140,12 +140,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">小伙伴大玩具 <br/>
-	<span style="font-family:Lato,sans-serif;font-size:20px;">Mediacorp </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">小伙伴大玩具 <br/>新传媒<br/>
+	<span style="font-family:Lato,sans-serif;font-size:20px;">[Mediacorp] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/Mediacorp-TV-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Mediacorp-TV-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -155,12 +155,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">新加坡国家文物局<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">		National Heritage Board </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">新加坡国家文物局<br />国家文物局<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[National Heritage Board] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/National-Heritage-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/National-Heritage-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;"> 阅览展板 </a>
   </div></td>
     </tr>
@@ -170,12 +170,12 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
-  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">我们的母语，我们的文化，我们的新加坡<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">National Institute of Education </span></td>
+  text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">我们的母语，我们的文化，我们的新加坡<br />新加坡国立教育学院<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[National Institute of Education] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/National-Institute-of-Education-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/National-Institute-of-Education-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板 </a>
   </div></td>
     </tr>
@@ -186,13 +186,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">图书馆华文服务
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">National Library Board</span>
+   <br />国家图书馆管理局<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[National Library Board]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/National-Library-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/National-Library-Board-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
@@ -202,13 +202,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">华文华语，快乐学习！
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">Singapore Centre for Chinese Language</span>
+   <br />新加坡华文教研中心<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Singapore Centre for Chinese Language]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Singapore-Centre-for-Chinese-Language-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="/cl-sccl" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
@@ -219,13 +219,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">光阴的故事历史虚拟走廊
-   <br />
-<span style="font-family:Lato,sans-serif;font-size:20px;">Singapore Federation of Chinese Clan Associations </span>
+   <br />新加坡宗乡会馆联合总会<br/>
+<span style="font-family:Lato,sans-serif;font-size:20px;">[Singapore Federation of Chinese Clan Associations]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/Singapore-Federation-of-Chinese-Clan-Associations-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/Singapore-Federation-of-Chinese-Clan-Associations-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;">阅览展板</a>
   </div></td>
     </tr>
@@ -236,13 +236,13 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;font-size:25px;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;">读报从小开始
-   <br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">ZBSchools</span>
+   <br />早报校园<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[ZBSchools]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">	
- <a href="/ZBSchools-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">阅读简介</a>
+ <a href="/ZBSchools-synopses" class="btn1" style="color:#fff;font-family:KaiTi;">简介</a>
   <a href="#" class="btn2" style="color:#fff;font-family:KaiTi;">阅览展板</a>
   </div></td>
     </tr>
