--- a/pages/小伙伴大玩具.md
+++ b/pages/小伙伴大玩具.md
@@ -34,9 +34,7 @@ description: ""
 <a href="/exhibits/chinese-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
 <h4 style="font-size: 35px;font-family: KaiTi;padding-top:12px;margin:10px;color: #d84178;text-align:justify;">小伙伴大玩具</h4>
 <p style="font-size: 20px;font-family: KaiTi;text-align:justify;">          你是否曾经幻想驾驶玩具飞机带家人去旅行？幻想给最爱的洋娃娃设计独特的服装？“小伙伴大玩具”发挥无限想象，把玩具放大，让小朋友通过丰富多彩的活动认识和发现这些“大玩具”，尽情玩耍！</p>
-<h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Big Toys
-X, Y & Zain!
-Ming Lee C/o Manickam</h4>
+<h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">X, Y & Zain!</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Through playing with Big Toys, kids get a chance to see and experience their favourite toys - upsized and real! Kids get to discover and learn all about our big toys as well as their actual versions through a wide variety of fun activities.</p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
