Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -166,7 +166,8 @@ Dr Sukuna S. Vijayadevar, PhD <br/>
  <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/>
   <br/>
 Mdm Sumathi Krishnasamy <br/>
-		Senior Teacher, Tamil Language 
+		Senior Teacher, <br>
+	 Tamil Language 
 Horizon Primary School <br/>
         <br/>
       Mdm Thasneem Parveen D/O Sirazudeen<br/>
