--- a/pages/新加坡国家文物局.md
+++ b/pages/新加坡国家文物局.md
@@ -40,7 +40,7 @@ description: ""
  <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">National Heritage Board</h4>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Everyone is welcome to discover the heritage and culture of our Mother Tongue Languages with the National Heritage Board (NHB).<br/><br>
 Find out more about language programmes, tips and resources from the Speak Mandarin Campaign, Malay Language Council, Singapore and Tamil Language Council.<br/><br>
-Learn more about the Heritage Institutions at the Indian Heritage Centre, Malay Heritage Centre and Sun Yat Sen Nanyang Memorial Hall.<br/><br>
+Learn more about the Heritage Institutions including the Indian Heritage Centre, Malay Heritage Centre and Sun Yat Sen Nanyang Memorial Hall.<br/><br>
 Parents can find out more about the learning opportunities available for the young, while educators can explore opportunities to expand learning beyond the classroom. </p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
