--- a/pages/இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md
+++ b/pages/இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்.md
@@ -42,6 +42,6 @@ description: ""
 At MK@Horizon, the Starlight Literacy programme for MTL, uses routines and learning-centre time to encourage children to interact with one another in their MTL within a variety of meaningful contexts. Children also develop an appreciation for local ethnic cultures. </p>
 <p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">The weekly, dedicated learning-centre time allows children to learn more about Chinese, Malay or Indian culture through purposeful play. Through the “Read for Joy” programme, interactive games and “Weeks of Wonder” projects, children develop both an interest and confidence in communicating in their MTL.
 	<br/><br>
-Learning MTL interactively is both natural and enjoyable for children</p>
+Learning MTL interactively is both natural and enjoyable for children.</p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
