--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
@@ -75,14 +75,14 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்<br />
-			<span style="font-family:Lato,sans-serif;">MK @ Horizon </span><br />
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">இருமொழித்திறன் வாய்ந்த பிள்ளைகளை வளர்த்தல்<br/>கல்வி அமைச்சின் ஹொரைஸன் பாலர் பள்ளி <br/>
+			<span style="font-family:Lato,sans-serif;">[MK @ Horizon] </span><br />
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-MK-Horizon-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition </a>
+ <a href="/tl-MK-Horizon-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:12px;"> சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;">ஒளிக்காட்சியைக் காண </a>
   </div></td>
     </tr>
 </table>
