Update file: பாலர் பள்ளிகள்.md

--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பாலர் பள்ளிகள்.md
@@ -81,8 +81,8 @@ text-decoration:none;
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-MK-Horizon-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;"> சுருக்கவுரையைக் காண</span></a>
-  <a href="#" class="btn2" style="color:#fff;">ஒளிக்காட்சியைக் காண </a>
+ <a href="/tl-MK-Horizon-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -92,14 +92,15 @@ text-decoration:none;
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
   text-align: left;padding: 8px;background-color:#9b4490; color:#fff">நான் என் பண்பாட்டின் பிரதிநிதி
-  <br />
-			<span style="font-family:Lato,sans-serif;">MK @ Wellington</span>
+		<br />கல்வி அமைச்சின் வெலிங்டன் பாலர் பள்ளி
+<br/>
+			<span style="font-family:Lato,sans-serif;">[MK @ Wellington]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-MK-Wellington-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-MK-Wellington-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -108,13 +109,14 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்<br/>
-<span style="font-family:Lato,sans-serif;">	PCF Sparkletots Preschool @ Chua Chu Kang Blk 10 (KN) </span></td>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விளையாட்டின்வழியே மகிழ்ச்சியாகத் தமிழ் கற்றல்<br/>ம.செ.க. சமூக அறநிறுவனம் ஸ்பார்கல்டாட்ஸ் பாலர் பள்ளி 
+சுவா சூ காங் புளோக் 10<br/>
+<span style="font-family:Lato,sans-serif;">[PCF Sparkletots Preschool @ Chua Chu Kang Blk 10]</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-PCF-Sparkletots-Preschool-Chua-Chu-Kang-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition </a>
+ <a href="/tl-PCF-Sparkletots-Preschool-Chua-Chu-Kang-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span> </a>
   </div></td>
     </tr>
 </table>
@@ -123,15 +125,16 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">
-வேற்றுமையில் ஒற்றுமை<br />
-	<span style="font-family:Lato,sans-serif;">	PCF Sparkletots Preschool @ Punggol Shore Blk 174D (KN)</span> </td>
+வேற்றுமையில் ஒற்றுமை<br />ம.செ.க. சமூக அறநிறுவனம் ஸ்பார்கல்டாட்ஸ் பாலர் பள்ளி 
+பொங்கோல் கரை 174D<br/>
+	<span style="font-family:Lato,sans-serif;">[PCF Sparkletots Preschool @ Punggol Shore Blk 174D]</span> </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-PCF-Sparkletots-Preschool-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-PCF-Sparkletots-Preschool-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
-	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
