--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/பள்ளிகள்.md
@@ -75,14 +75,14 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்<br />
-			<span style="font-family:Lato,sans-serif;">Gan Eng Seng Primary School </span><br />
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">மெய்ந்நிகர்வழி மகிழ்வூட்டும் வாய்மொழிக் கற்றல்<br/>கான் எங் செங் தொடக்கப்பள்ளி<br/>
+			<span style="font-family:Lato,sans-serif;">Gan Eng Seng Primary School </span><br/>
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Gan-Eng-Seng-Primary-School-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="/Gan-Eng-Seng-Pri-exhibition" class="btn2" style="color:#fff;">View Exhibition </a>
+ <a href="/tl-Gan-Eng-Seng-Primary-School-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -92,14 +92,14 @@ text-decoration:none;
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
   text-align: left;padding: 8px;background-color:#9b4490; color:#fff">நானும் தமிழில் பேசுவேன்!
-  <br />
-			<span style="font-family:Lato,sans-serif;">Pei Tong Primary School </span>
+  <br/>பெய் தொங் தொடக்கப்பள்ளி<br/>
+			<span style="font-family:Lato,sans-serif;">[Pei Tong Primary School]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-I-Speak-in-Tamil-Too-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-I-Speak-in-Tamil-Too-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -108,13 +108,13 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">பகுத்தறிவோம் பகிர்ந்துகொள்வோம்<br/>
-			<span style="font-family:Lato,sans-serif;">	Evergreen Primary School </span> </td>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">பகுத்தறிவோம் பகிர்ந்துகொள்வோம்<br/> எவெர்கிரீன் தொடக்கப்பள்ளி<br/>
+			<span style="font-family:Lato,sans-serif;">	[Evergreen Primary School] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Let-Express-and-Explore-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="/Evergreen-Pri-exhibition" class="btn2" style="color:#fff;">View Exhibition </a>
+ <a href="/tl-Let-Express-and-Explore-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -122,14 +122,14 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">வகுப்பறைக்கு அப்பாலும் தமிழ்மொழியின் பயன்பாட்டை ஊக்குவிக்கும் இளம் ஊடகப் படைப்பாளர் திட்டம்<br />
-			<span style="font-family:Lato,sans-serif;">	Boon Lay Secondary School </span></td>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">வகுப்பறைக்கு அப்பாலும் தமிழ்மொழியின் பயன்பாட்டை ஊக்குவிக்கும் இளம் ஊடகப் படைப்பாளர் திட்டம்<br />பூன் லே உயர்நிலைப்பள்ளி <br/>
+			<span style="font-family:Lato,sans-serif;">[Boon Lay Secondary School] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Boon-Lay-Secondary-School-Synopsis" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="/Boon-Lay-Sec-tl-exhibition" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-Boon-Lay-Secondary-School-Synopsis" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:14px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
-</table><br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+</table><br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
