Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -57,7 +57,7 @@ Mr Jaya Ganesh Isuran<br/>
         </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Mr-Jaya-Ganesh-Isuran" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Mr-Jaya-Ganesh-Isuran" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr>
 </table>
@@ -72,7 +72,7 @@ Mr Jaya Ganesh Isuran<br/>
 		Associate Librarian, Tamil Language, National Library Board </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Zainab" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Ms-Zainab" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr>
 </table>
@@ -88,7 +88,7 @@ Ms Yogeswari Preshant <br/>
  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Yogeswari-Preshant" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Ms-Yogeswari-Preshant" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr>
 </table>
@@ -104,7 +104,7 @@ Ms Sajini Naidu <br/>
 			</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Sajini-Naidu" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Ms-Sajini-Naidu" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
  </td>
     </tr>
 </table>
@@ -120,7 +120,7 @@ Mr Sundar Plavenderraj<br/>
 			</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Mr-Sundar-Plavenderraj" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Mr-Sundar-Plavenderraj" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr>
 </table>
@@ -136,7 +136,7 @@ Ms Rani Kanna <br/>
 			</span>  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Ms-Rani-Kanna" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Ms-Rani-Kanna" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr>
 </table>
@@ -145,13 +145,13 @@ Ms Rani Kanna <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">Sபாலர் பள்ளி மாணவர்களை மகிழ்வூட்டும் தமிழ்மொழி கற்றலில் ஈடுபடுத்த ஆசிரியர்களும் பெற்றோர்களும் மேற்கொள்ளக்கூடிய சில உத்திமுறைகள் <br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">பாலர் பள்ளி மாணவர்களை மகிழ்வூட்டும் தமிழ்மொழி கற்றலில் ஈடுபடுத்த ஆசிரியர்களும் பெற்றோர்களும் மேற்கொள்ளக்கூடிய சில உத்திமுறைகள் <br/>
  <span style="font-family: Lato,Sans-Serif; font-size: 18px;"> (Available online from 27 Aug 22) <br/><br/>
 Dr Sukuna S. Vijayadevar, PhD <br/>
 	 Lead Curriculum Specialist, NIEC-HQ</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Dr-Sukuna-S-Vijayadevar" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Dr-Sukuna-S-Vijayadevar" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr>
 </table>
@@ -175,7 +175,7 @@ Horizon Primary School <br/>
 	 Horizon Primary School </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Mdm-Sumathi-Krishnasamy-And-Mdm-Thasneem-Parveen" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a>
+ <a href="/Mdm-Sumathi-Krishnasamy-And-Mdm-Thasneem-Parveen" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a>
 </td>
     </tr></table>
 <h4 style="font-family:Lato,sans-serif;"><b>For Pre-School/Primary Educators</b></h4>
@@ -190,7 +190,7 @@ Mdm Kunawathyammal D/O Kaliannan <br/>
 </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
- <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Lato,sans-serif;">Watch Here!</a></td>
+ <a href="/Mrs-Kunawathy-Nallathambi" class="btn1" style="color:#fff;font-family:Anjal InaiMathi;">ஒளிக்காட்சியைக் காண</a></td>
     </tr>
 </table>
 	<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
