Update file: சமூகப் பங்காளர்கள்.md

--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
@@ -75,14 +75,14 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">எஸ்பிளனேட் - கடலோரக் கலை அரங்கம்<br />
-			<span style="font-family:Lato,sans-serif;">Esplanade - Theatres on the Bay</span><br />
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490; color:#fff">எஸ்பிளனேட் - கடலோரக் கலை அரங்கம்<br />எஸ்பிளனேட்<br/>
+			<span style="font-family:Lato,sans-serif;">[Esplanade - Theatres on the Bay]</span><br />
  </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Esplanade-Theatres-on-the-Bay" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition </a>
+ <a href="/tl-Esplanade-Theatres-on-the-Bay" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
