--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -184,7 +184,7 @@ Horizon Primary School <br/>
   width: 100%;">
   <tr>
     <td style="border: none; width: 70%;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">உடன்பாடான கல்வியோடு பாராட்டத்தக்க வினவல் அணுகுமுறையின் வாயிலாகத் தமிழ்மொழிக் கற்றல்<br/>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff;font-family:Anjal InaiMathi;font-size:22px;">உடன்பாட்டுக் கல்வி, பாராட்டத்தக்க வினவல் அணுகுமுறை வாயிலாகத் தமிழ்மொழி கற்றல்<br/>
  <span style="font-family: Lato,Sans-Serif; font-size: 18px"> [Blended (Hybrid) Session from 11.30am to 12.30pm]<br/><br/>
 Mdm Kunawathyammal D/O Kaliannan <br/>
    Senior Teaching Fellow, National Institute of Education
