--- a/pages/நமது தாய்மொழிகளை நேசிப்பதற்கு வித்திடுவோம்!.md
+++ b/pages/நமது தாய்மொழிகளை நேசிப்பதற்கு வித்திடுவோம்!.md
@@ -32,7 +32,7 @@ description: ""
 }
 </style>
 <a href="/exhibits/tamil-exhibitions-e/community-partners/" style="float:left;" class="backbtn">Back</a><br>
-<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;">நமது தாய்மொழிகளை நேசிப்பதற்கு  வித்திடுவோம்</h4>
+<h4 style="font-size: 35px;font-family: Anjal InaiMathi;padding-top:12px;margin:10px;color: #9b4490;line-height:1.1;">நமது தாய்மொழிகளை நேசிப்பதற்கு  வித்திடுவோம்</h4>
 <p style="font-size: 20px;font-family: Anjal InaiMathi;text-align:justify;">இருமொழிக் கல்விக்கான லீ குவான் யூ நிதியானது,     2011-ஆம் ஆண்டு நடைபெற்ற திரு லீ குவான் யூ அவர்களின் ‘எனது வாழ்நாள் சவால்: சிங்கப்பூரின் இருமொழிப் பயணம்’ என்னும் நூல் வெளியீட்டு விழாவின்போது அறிவிக்கப்பட்டது.</p>
 <p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">சிங்கப்பூரின் இருமொழிக் கல்வியை வலுப்படுத்தும் வகையிலும் தாய்மொழிகளை வாழும் மொழிகளாக நிலைபெறச் செய்யும் நோக்கிலும் அமையப்பெறும் புத்தாக்கமும் ஈடுபாடும் மிகுந்த அணுகுமுறைகள், வளங்கள், நிகழ்ச்சிகள் முதலியவற்றுக்கு இந்நிதி ஊக்கமளித்தும் ஆதரவளித்தும் வருகிறது.</p>
 <p style="font-size: 20px;font-family:Anjal InaiMathi;text-align:justify;">குழந்தைகள் தாய்மொழிகளை விருப்பத்தோடு பயிலுவதற்கு ஏதுவான பல ஆர்வமூட்டும் வளங்கள் நிதியின் சமூக வலைத்தளங்களான யூடியூப், ஃபேஸ்புக், இன்ஸ்டகிராம்  ஆகியவற்றில் இடம்பெற்றுள்ளன.</p>
