--- a/pages/小学.md
+++ b/pages/小学.md
@@ -51,6 +51,14 @@ width:100%;
   clear: both;
   display: table;
 }
+		iframe{
+		border: 0;
+}
+	@media screen and (min-width: 600px) {
+  iframe {
+    width:100%;
+  }
+}
 	</style>
 <a href="/exhibits/chinese-exhibitions-b/moe-curriculum" class="btn" style="float:left;">Previous</a>
   <a href="/cl-secsch" class="btn" style="float:right;">Next</a><br />
