--- a/pages/小学.md
+++ b/pages/小学.md
@@ -54,7 +54,7 @@ width:100%;
 	 iframe {
 		border: 0;
 }
-	@media screen and (min-width: 600px) {
+	@media screen and (max-width: 600px) {
   iframe {
     width:100%;
   }
